large number of IAsyncOperationCompletedHandler hangs in MSIX package
Categories
(Firefox :: Shell Integration, defect)
Tracking
()
People
(Reporter: bhearsum, Assigned: bhearsum)
References
Details
(Whiteboard: [fidedi-ope])
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
pascalc|PTO
:
approval-mozilla-release-
|
Details | Review |
We don't have a stack trace for this, but it's likely fallout from https://bugzilla.mozilla.org/show_bug.cgi?id=1756209. Specifically, there's two blocks in that file that block until they find AsyncStatus::Completed -- which is probably wrong, as async operations can complete with AsyncStatus::Error.
Updated•3 years ago
|
| Assignee | ||
Comment 1•3 years ago
|
||
I've been unable to find confirmation of this (there is basically zero guidance on how to work with these from plain C++ as far as I can tell), but the available states imply that async operations will begin in Started, and then change to one of the other ones later.
| Assignee | ||
Comment 3•3 years ago
|
||
Comment on attachment 9299386 [details]
Bug 1795958: don't block windows package manager operations on successful completion of async operations. r?rkraesig!
Beta/Release Uplift Approval Request
- User impact if declined: Many users of our Microsoft Store product will experience hangs or crashes
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple change that only affects MSIX builds. It cannot make anything worse, at the very least.
- String changes made/needed:
- Is Android affected?: No
Comment 4•3 years ago
|
||
| bugherder | ||
Comment 5•3 years ago
|
||
Comment on attachment 9299386 [details]
Bug 1795958: don't block windows package manager operations on successful completion of async operations. r?rkraesig!
Approved for 107.0b4.
Comment 6•3 years ago
|
||
| bugherder uplift | ||
Ben, is that patch needed in addition to the one in bug 1796391 to fix the crashes?
Comment on attachment 9299386 [details]
Bug 1795958: don't block windows package manager operations on successful completion of async operations. r?rkraesig!
Let's reduce the scope of the dot release and let this ship with 107, thanks.
Description
•