Bug 1795958: don't block windows package manager operations on successful completion of async operations. r=rkraesig, a=dmeehan

I've been unable to find confirmation of this (there is basically zero guidance on how to work with these from plain C++ as far as I can tell), but the available states imply that async operations will begin in Started, and then change to one of the other ones later.

Differential Revision: https://phabricator.services.mozilla.com/D159797